Chrome horizontal scroll fix
Temporary (but likely permanent) fix for the horizontal scrollbar in chrome.

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 	width: 100vw;
 	margin: 0;
 	background-color: var(--elev_0);
+	overflow: hidden scroll;
 }
 
 h1 {
